# geforcenow-awdl0

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
LaunchAgents/: io.github.sjparkinson.geforcenow-awdl0.plist
Sources/GFNAwdl0Lib/: Daemon.swift  GFNAwdl0Lib.swift  Installer.swift  InterfaceController.swift  InterfaceMonitor.swift  ProcessMonitor.swift  WindowMonitor.swift
Sources/geforcenow-awdl0/: main.swift
Tests/GFNAwdl0Tests/: GFNAwdl0Tests.swift
resources/: com.geforcenow.awdl0.plist  io.github.sjparkinson.geforcenow-awdl0.plist
src/: cli.rs  interface.rs  interface_controller.rs  interface_monitor.rs  lib.rs  main.rs  monitor.rs  process_monitor.rs  window_monitor.rs
tests/: integration.rs
