[package]
name = "geforcenow-awdl0"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Prevent Apple Wireless Direct Link from becoming active while GeForce NOW is running on macOS"
license = "GPL-3.0-or-later"
repository = "https://github.com/sjparkinson/awdl0"
readme = "README.md"
keywords = ["macos", "awdl", "geforcenow", "networking"]
categories = ["command-line-utilities"]

[[bin]]
name = "geforcenow-awdl0"
path = "src/main.rs"

[lib]
name = "geforcenow_awdl0"
path = "src/lib.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Objective-C bindings
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSDictionary",
    "NSEnumerator",
    "NSNotification",
    "NSObject",
    "NSOperation",
    "NSRunLoop",
    "NSString",
    "NSArray",
    "NSThread",
    "NSDate",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace",
    "NSRunningApplication",
] }

# System interfaces
libc = "0.2"
nix = { version = "0.31", features = ["net", "ioctl"] }

# SystemConfiguration framework for interface monitoring
system-configuration = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
